--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -289,23 +289,28 @@
     <string name="delete_identity">delete identity</string>
     <string name="surespot_help">surespot help</string>
 	<string name="next">next</string>
-	<string name="backup_drive">backup to google drive</string>
+	<string name="backup_drive">Backup to Google Drive</string>
 	<string name="could_not_backup_identity_to_google_drive">Could not backup identity to google drive</string>
-	<string name="identity_successfully_backed_up_to_google_drive">identity successfully backed up to google drive</string>
-	<string name="google_drive_account_label">account:</string>
+	<string name="identity_successfully_backed_up_to_google_drive">identity successfully backed up to Google Drive</string>
+	<string name="google_drive_account_label">Using Google Account:</string>
 	<string name="need_google_drive_account">please select a google  account from the settings menu</string>
 	<string name="need_google_drive_enabled">please enable google drive backup from the settings menu</string>
-	<string name="restore_local">restore from device</string>
-	<string name="restore_drive">restore from drive</string>
-	<string name="restore_drive_account_label">account:</string>
-	<string name="restore_local_location_label">location:</string>
+	<string name="restore_local">Restore from Device Storage</string>
+	<string name="restore_drive">Restore from Google Drive</string>
+	<!-- <string name="restore_drive_account_label">Google Drive account:</string> -->
+	<string name="restore_local_location_label">Restoring from local device, location:</string>
 	<string name="could_not_list_identities_from_google_drive">could not get list of identities from google drive</string>
 	<string name="no_google_account_selected">no google account selected</string>
-	<string name="select_google_drive_account">select Google account</string>
+	<string name="select_google_drive_account">select</string>
 	<string name="re_add_google_account">Unfortunately the Google token is no longer valid and you will need to remove and re-add your Google account via device settings.</string>
 	<string name="progress_restoring_identity">restoring identity</string>
-	<string name="progress_loading_identities">loading identities</string>
+	<string name="progress_loading_identities">loading identity backups</string>
 	<string name="progress_backup_identity_drive">backing up identity</string>
 	<string name="progress_drive_dir_check">checking for surespot identities folder</string>
+	<string name="no_drive_identities">No identity backups loaded from Google Drive.</string>
+	<string name="no_local_identities">No identity backups found on Device Storage.</string>
+	<string name="identity_name">identity name</string>
+	<string name="last_backed_up">last backed up</string>
+	<string name="last_modified">last modified</string>
 	
 </resources>
