--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -77,12 +77,12 @@
     <string name="crash_dialog_ok_toast">Thank you!</string>
     <string name="external_invite_message">"I'd like to chat with you privately via surespot. Click this link to install the android app and invite me as a friend: "</string>
     <string name="help_backupIdentities1">"Because surespot uses encryption keys that are never uploaded to our servers, if you lose your phone, or uninstall then re-install the app, or wipe the app's data, you will not be able to login unless you have backed up your identity."</string>
-    <string name="help_backupIdentities2">"Surespot has a cloud based identity auto-backup mechanism that can be enabled from the settings menu. You can also choose to leave this disabled and backup your identity to local device storage from the settings menu."</string>
-    <string name="title_activity_auto_backup">Auto-Backup</string>
-    <string name="help_auto_backup_warning_pre"><![CDATA["By checking below you are enabling surespot to automatically backup your identity via <a href="https://developer.android.com/google/backup/index.html">Google's Android Data Backup Service</a>. In order for this to work your phone <a href='https://support.google.com/android/bin/answer.py?hl=en&answer=1663708'>must have 'backup my data' and 'automatic restore' enabled.</a> There are some caveats around this. While surespot can tell Google 'hey we need a backup done', as to when that backup actually occurs is anyone's guess. For this reason surespot will notify you when the backup actually occurs."]]></string>
-    <string name="help_auto_backup_warning">Until then your identities are not backed up so try not to lose your phone or clear phone/surespot data!</string>       
-    <string name="help_auto_backup2"><![CDATA["By enabling auto-backup you will be storing a copy of your <a href="https://en.wikipedia.org/wiki/Public-key_cryptography">private keys</a> on a Google cloud server. Your keys are encrypted with <a href="http://www.eetimes.com/design/embedded-internet-design/4372428/How-secure-is-AES-against-brute-force-attacks-">256 bit AES</a> using a key derived by executing a <a href="https://en.wikipedia.org/wiki/PBKDF2">PBKDF</a> upon your password. Should a third party somehow gain access to Google’s server and attempt to decrypt your identity file by <a href="https://en.wikipedia.org/wiki/Brute-force_attack">brute force attack</a>, be aware that the <a href="https://en.wikipedia.org/wiki/Password_strength">strength</a> of your password will ultimately determine their success."]]></string>
-    <string name="help_manual_backup"><![CDATA["This will export a copy of the selected identity encrypted with <a href="http://www.eetimes.com/design/embedded-internet-design/4372428/How-secure-is-AES-against-brute-force-attacks-">256 bit AES</a> with a key derived from your password through a <a href="https://en.wikipedia.org/wiki/PBKDF2">PBKDF</a> (Password Based Key Derivation Function) to the location below. For maximum security this file should then be copied from your device to a secure backup location so that it can be restored in the case of app uninstall or 'clear data', a lost or stolen device, or other data loss."]]></string>
+    <string name="help_backupIdentities2">"Surespot has both cloud and device storage based identity backup mechanisms that can be found on the settings menu."</string>
+    
+    <string name="help_backup_what"><![CDATA["This will export a copy of the selected identity encrypted with <a href="http://www.eetimes.com/design/embedded-internet-design/4372428/How-secure-is-AES-against-brute-force-attacks-">256 bit AES</a> with a key derived from your password through a <a href="https://en.wikipedia.org/wiki/PBKDF2">PBKDF</a> (Password Based Key Derivation Function)"]]></string>
+    <string name="help_backup_local">"For maximum security we recommend using Device Storage backup. Once backed up, the identity file should then be copied from your device to a secure backup location so that it can be restored in the case of app uninstall or 'clear data', a lost or stolen device, or other data loss."</string>       
+    <string name="help_backup2"><![CDATA["If you elect to backup your identity on Google Drive you will be storing a copy of your <a href="https://en.wikipedia.org/wiki/Public-key_cryptography">private keys</a> on Google Drive servers. Should a third party somehow gain access to the Google Drive servers and attempt to decrypt your identity file by <a href="https://en.wikipedia.org/wiki/Brute-force_attack">brute force attack</a>, be aware that the <a href="https://en.wikipedia.org/wiki/Password_strength">strength</a> of your password will ultimately determine their success."]]></string>
+    
     <string name="pwyl_text"><![CDATA["Surespot is ad and data mining free.<br><br>Servers and storage cost money; your donations ensure that we do not have to charge for surespot.<br><br>We will donate a percentage to the <a href="https://www.eff.org/issues/privacy">EFF</a> that they may continue to fight for all of our electronic freedoms."]]></string>
     <string name="help_messageHistory">Surespot has a 1000 message history. Once you reach 1000 messages your oldest message will be deleted so you will only ever have 1000 (encrypted) messages stored on the server. Of course you can delete any and all of your messages at any time.</string>
     <string name="title_activity_about">about surespot</string>
@@ -99,8 +99,7 @@
     <string name="about_version">"version: %s"</string>
     <string name="surespot">surespot</string>
     <string name="about_action_bar_right">about</string>
-    <string name="identity">identity</string>
-    <string name="auto_backup_action_bar_right">auto-backup</string>
+    <string name="identity">identity</string>    
     <string name="invite">invite</string>
     <string name="no_contact_data_selected_or_entered">no contact data selected or entered</string>
     <string name="toggled_sms_contact_population_mechanism">toggled sms contact population mechanism</string>
@@ -135,8 +134,8 @@
     <string name="could_not_invite">Could not invite friend, please try again later.</string>
     <string name="keys">keys</string>
     <string name="generating_keys_progress">generating and uploading new keys</string>
-    <string name="backup_identities_again_keys">Since your identity keys will change, please backup this identity (again) after the operation completes successfully. If you have auto-backup enabled, you will receive a notification when the identity has been backed up.</string>
-    <string name="backup_identities_again_password">Since your identity password will have changed, please backup this identity again after the operation completes successfully. If you have auto-backup enabled, you will receive a notification when the identity has been backed up.</string>
+    <string name="backup_identities_again_keys">Since your identity keys will change, please backup this identity (again) after the operation completes successfully.</string>
+    <string name="backup_identities_again_password">Since your identity password will have changed, please backup this identity again after the operation completes successfully.</string>
     <string name="create_new_keys_for">create new keys for %s</string>
     <string name="enter_password_for">enter password for %s</string>
     <string name="enter_username_and_password">Please enter a username and password.</string>
@@ -157,7 +156,7 @@
     <string name="billing_paypal_link_email_subject">surespot pay what you like paypal link</string>
     <string name="billing_paypal_link_email_body">Thankyou for paying what you like for surespot! The paypal link is:</string>
     <string name="none">none</string>
-    <string name="send_to_title">send to yourself at?</string>
+    <string name="pwyl_paypal_send_to_self">email link to yourself</string>
     <string name="billing_bitcoin_copied_to_clipboard">%s copied to clipboard</string>
     <string name="billing_bitcoin_email_subject">surespot pay what you like bitcoin address</string>
     <string name="billing_bitcoin_email_body_address">Thankyou for paying what you like for surespot! The bitcoin address is: %s</string>
@@ -208,8 +207,6 @@
     <string name="newer_identity_exists">identity not restored as a newer version of the identity you are trying to restore already exists</string>
     <string name="backed_up_identity_to_path">backed up identity %1$s to %2$s</string>
     <string name="restore">restore</string>
-    <string name="restore_discovered_identities_location">Discovered the identities below in:\n\n\t%s\n\n click on a name to restore.</string>
-    <string name="restore_identities_none_discovered">No surespot identity (*.ssi) files discovered in\n\n\t%s\n\nplease copy your identity file(s) there. (Note: this may not be the removable SD card, it could be the device\'s internal storage).</string>
     <string name="restore_identity_already_exists">not restoring identity as it already exists</string>
     <string name="restore_identity">restore %s identity</string>
     <string name="assign">assign</string>
@@ -222,14 +219,14 @@
     <string name="error_message_throttled">error sending message: throttled</string>
     <string name="error_message_generic">error sending message</string>
     <string name="error_message_resend">sending failed - long press to resend</string>
-    <string name="auto_identity_backup_via_google">auto-backup identity via google</string>
     <string name="via_google_play_in_app_purchase">VIA GOOGLE PLAY IN APP PURCHASE</string>
     <string name="via_paypal">VIA PAYPAL</string>
+    <string name="pwyl_send_to_dialog_title">send to?</string>    
     <string name="open_link_in_browser">open link in browser</string>
-    <string name="send_link_in_email">send to yourself at?</string>
+    <string name="send_link_in_email">email link to yourself</string>
     <string name="via_bitcoin">VIA BITCOIN</string>
     <string name="copy_address_to_clipboard">copy address to clipboard</string>
-    <string name="send_address_and_qr_code_in_email">send address and QR code in email</string>
+    <string name="send_address_and_qr_code_in_email">email yourself address and QR code</string>
     <string name="open_bitcoin_wallet">open bitcoin wallet (if supported)</string>
     <string name="select_identity">select identity</string>
     <string name="current_password">current password</string>
@@ -240,11 +237,9 @@
     <string name="select_all">select all</string>
     <string name="delete_identity_message_warning">Deleting an identity will erase all messages that identity has sent. It can not be undone.</string>
     <string name="identity_colon">identity:</string>
-    <string name="backup_location">"backup location: "</string>
     <string name="backup_location_note">Note: this may or may not be the removable SD card depending on your ROM.</string>
     <string name="invite_others">Invite others to communicate with you privately via surespot by sharing an auto-invite link with them.</string>
-    <string name="invite_reassurance">Your contact information is not stored, uploaded, or used anywhere other than in this capacity.</string>
-     
+    <string name="invite_reassurance">Your contact information is not stored, uploaded, or used anywhere other than in this capacity.</string>     
     <string name="invite_via_email">invite via email</string>    
     <string name="invite_via_text_message">invite via text message</string>
     <string name="invite_via_other_application">invite via other application</string>
@@ -268,7 +263,6 @@
     <string name="pref_title_delete_all_messages">delete all messages</string>
     <string name="pref_title_identity_management">identity management</string>
     <string name="pref_title_change_password">change password...</string>
-    <string name="pref_title_identity_auto_backup">identity auto-backup...</string>
     <string name="pref_title_alternate_sms_invite_to">alternate sms invite \'to\'</string>
     <string name="pref_title_silent_error_reporting">silent error reporting</string>
     <string name="pref_title_message_debug_mode">message debug mode</string>
@@ -276,9 +270,8 @@
     <string name="pref_title_options">options</string>
     <string name="pref_summary_delete_message">confirm before deleting a message</string>
     <string name="pref_summary_delete_all_messages">confirm before deleting all messages</string>
-    <string name="pref_summary_identity_auto_backup">Backup and restore your identity automatically using Google\'s backup servers.</string>
-    <string name="pref_summary_export_identity">Backup your identity to local device storage.</string>
-    <string name="pref_summary_import_identity">Restore your identity from local device storage.</string>
+    <string name="pref_summary_export_identity">Backup your identity to Device Storage or Google Drive.</string>
+    <string name="pref_summary_import_identity">Restore your identity from Device Storage or Google Drive.</string>
     <string name="pref_summary_delete_identity">Deleting an identity can not be undone.</string>
     <string name="pref_summary_regen_keys">For the paranoid.</string>
     <string name="pref_summary_alternate_sms_delimiter">Needs to be enabled on some devices to populate the sms \'to\' field correctly when multiple contacts are selected in invite contacts.</string>
@@ -290,18 +283,13 @@
     <string name="surespot_help">surespot help</string>
 	<string name="next">next</string>
 	<string name="backup_drive_button">Execute Google Drive Backup</string>
-	<string name="could_not_backup_identity_to_google_drive">Could not backup identity to google drive</string>
-	<string name="identity_successfully_backed_up_to_google_drive">identity successfully backed up to Google Drive</string>
+	<string name="could_not_backup_identity_to_google_drive">Could not backup identity to Google Drive</string>
+	<string name="identity_successfully_backed_up_to_google_drive">Identity successfully backed up to Google Drive</string>
 	<string name="google_drive_account_label">Using Google Account:</string>
-	<string name="need_google_drive_account">please select a google  account from the settings menu</string>
-	<string name="need_google_drive_enabled">please enable google drive backup from the settings menu</string>
 	<string name="restore_local">Restore from Device Storage</string>
 	<string name="restore_drive">Restore from Google Drive</string>
-	<!-- <string name="restore_drive_account_label">Google Drive account:</string> -->
-	<string name="restore_local_location_label">restore location</string>
-	<string name="backup_local_location_label">backup location</string>
-	<string name="could_not_list_identities_from_google_drive">could not get list of identities from google drive</string>
-	<string name="no_google_account_selected">no google account selected</string>
+	<string name="could_not_list_identities_from_google_drive">could not get list of identities from Google Drive</string>
+	<string name="no_google_account_selected">no Google account selected</string>
 	<string name="select_google_drive_account">select</string>
 	<string name="re_add_google_account">Unfortunately the Google token is no longer valid and you will need to remove and re-add your Google account via device settings.</string>
 	<string name="progress_restoring_identity">restoring identity</string>
