--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -138,7 +138,7 @@
     <string name="backup_identities_again_keys">Since your identity keys will change, please backup this identity (again) after the operation completes successfully.</string>
     <string name="backup_identities_again_password">Since your identity password will have changed, please backup this identity again after the operation completes successfully.</string>
     <string name="create_new_keys_for">create new keys for %s</string>
-    <string name="enter_password_for">enter password for %s</string>
+    <string name="enter_password_for">enter surespot password for %s</string>
     <string name="enter_username_and_password">Please enter a username and password.</string>
     <string name="usernames_case_sensitive">Usernames are case sensitive</string>
     <string name="aware_username_password">so please be aware of this when sharing them with others. The password should be at least 8 characters long and contain funky characters in weird places.</string>
@@ -202,14 +202,11 @@
     <string name="identity_deleted">identity deleted</string>
     <string name="backup">backup</string>
     <string name="backup_identity">backup identity %s</string>
-    <string name="identity_backed_up">identity %s backed up</string>
-    <string name="identity_backup_deleted">identity %s backup deleted</string>
-    <string name="identity_backup_complete_notification_title">identity backup complete</string>
     <string name="newer_identity_exists">identity not restored as a newer version of the identity you are trying to restore already exists</string>
     <string name="backed_up_identity_to_path">backed up identity %1$s to %2$s</string>
     <string name="restore">restore</string>
     <string name="restore_identity_already_exists">not restoring identity as it already exists</string>
-    <string name="restore_identity">restore %s identity</string>
+    <string name="restore_identity">restore identity %s</string>
     <string name="assign">assign</string>
     <string name="could_not_load_image">could not load image</string>
     <string name="image">image</string>
@@ -286,11 +283,10 @@
 	<string name="backup_drive_button">Execute Google Drive Backup</string>
 	<string name="could_not_backup_identity_to_google_drive">Could not backup identity to Google Drive</string>
 	<string name="identity_successfully_backed_up_to_google_drive">Identity successfully backed up to Google Drive</string>
-	<string name="google_drive_account_label">Using Google Account:</string>
 	<string name="restore_local">Restore from Device Storage</string>
 	<string name="restore_drive">Restore from Google Drive</string>
 	<string name="could_not_list_identities_from_google_drive">could not get list of identities from Google Drive</string>
-	<string name="no_google_account_selected">no Google account selected</string>
+	<string name="no_google_account_selected">No Google account selected.</string>
 	<string name="select_google_drive_account">select</string>
 	<string name="re_add_google_account">Unfortunately the Google token is no longer valid and you will need to remove and re-add your Google account via device settings.</string>
 	<string name="progress_restoring_identity">restoring identity</string>
