--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -286,7 +286,7 @@
 	<string name="restore_local">Restore from Device Storage</string>
 	<string name="restore_drive">Restore from Google Drive</string>
 	<string name="could_not_list_identities_from_google_drive">could not get list of identities from Google Drive</string>
-	<string name="no_google_account_selected">No Google account selected.</string>
+	<string name="no_google_account_selected">No Google account selected</string>
 	<string name="select_google_drive_account">select</string>
 	<string name="re_add_google_account">Unfortunately the Google token is no longer valid and you will need to remove and re-add your Google account via device settings.</string>
 	<string name="progress_restoring_identity">restoring identity</string>
