--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -303,5 +303,6 @@
 	<string name="backup_device">BACKUP IDENTITY TO DEVICE STORAGE</string>
 	<string name="backup_drive">BACKUP IDENTITY TO GOOGLE DRIVE</string>
 	<string name="let_me_select">let me select</string>  
-	
+	<string name="could_not_import_identity_drive_404">Could not load identity - please make sure you selected the same Google account that you were using in Google Drive.</string>  
+	<string name="pick_same_drive_account">Please pick the same account that you were using in Google Drive:</string>
 </resources>
