--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="no_identity_deleted">no identity deleted</string>
     <string name="identity_imported_successfully">identity restored successfully</string>
     <string name="could_not_import_identity">could not restore identity</string>
+    <string name="could_not_restore_identity_name">could not restore identity %s</string>
     <string name="notifications_title">push notifications</string>
     <string name="notifications_vibration">vibration</string>
     <string name="notifications_sound">sound</string>
@@ -45,6 +46,7 @@
     <string name="settings">settings</string>
     <string name="welcome_to_surespot"><![CDATA["Welcome to surespot! Data sent using this app is <a href="https://en.wikipedia.org/wiki/End-to-end_encryption">end-to-end</a> encrypted with <a href="https://en.wikipedia.org/wiki/Symmetric-key_algorithm">symmetric-key</a> encryption (<a href="https://en.wikipedia.org/wiki/Advanced_Encryption_Standard">256 bit AES</a>) using keys created with 521 bit <a href="https://en.wikipedia.org/wiki/Elliptic_curve_Diffie-Hellman">ECDH shared secret derivation</a>."]]></string>
     <string name="no_friends">"No friends...yet. Invite surespot users by entering their username below and touching 'invite'."</string>
+    <string name="help_invite">"Invite surespot users by entering their username and touching 'invite' on the 'home' tab."</string>
     <string name="invite_contacts">"Use the 'invite contacts' menu option to invite users via QR code, email, text message, or other applications."</string>
     <string name="navigate_between_chat_tabs">Navigate between tabs by swiping.</string>
     <string name="help_shortPress">"Touch 'home' to go to the home tab."</string>
@@ -75,7 +77,7 @@
     <string name="crash_dialog_text">It is with deep shame that we have to confess that an unexpected error has occurred.\n\nPlease help us to fix the issue by clicking OK to send an error report containing no personally identifying information.</string>
     <string name="crash_dialog_comment_prompt">You can add your comments about the problem below if you like:</string>
     <string name="crash_dialog_ok_toast">Thank you!</string>
-    <string name="external_invite_message">"I'd like to chat with you privately via surespot. Click this link %s to install the android app and invite me as a friend."</string>
+    <string name="external_invite_message">"I'd like to chat with you privately via surespot. Click %s to install the android app and invite me as a friend."</string>
     <string name="help_backupIdentities1">"Because surespot uses encryption keys that are never uploaded to our servers, if you lose your phone, or uninstall then re-install the app, or wipe the app's data, you will not be able to login unless you have backed up your identity."</string>
     <string name="help_backupIdentities2">"Surespot has both Google Drive and Device Storage based identity backup mechanisms that can be found on the settings menu."</string>
     
