--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -6,8 +6,8 @@
   <string name="username_label">Benutzername:</string>
   <string name="password_label">Passwort:</string>
   <string name="title_activity_main">surespot</string>
-  <string name="title_activity_signup">Anmelden</string>
-  <string name="title_activity_friends">Freunde</string>
+  <string name="title_activity_signup">Registrieren</string>
+  <string name="title_activity_friends">Kontakte</string>
   <string name="title_activity_notifications">Benachrichtigungen</string>
   <string name="hello_world">Hallo Welt!</string>
   <string name="export_sd">Lokale Sicherung exportieren</string>
@@ -53,7 +53,7 @@
   <string name="help_holdmessage">Halten Sie die Nachricht gedrückt um auf die Nachrichtenoptionen zu gelangen.</string>
   <string name="help_holdfriend">Halten Sie einen Kontakt gedrückt um auf die Kontaktoptionen zu gelangen.</string>
   <string name="help_imageZoom">Berühren sie das Bild um es zu vergrössern.</string>
-  <string name="incorrect_password_or_key">Falsches Passwort oder Schlüssel</string>
+  <string name="incorrect_password_or_key">Falsches Passwort oder falscher Schlüssel</string>
   <string name="no_such_user">Nutzer nicht gefunden</string>
   <string name="roll_keys">Erzeuge neues Schlüsselpaar</string>
   <string name="key_management">Erzeuge neues Schlüsselpaar...</string>
@@ -71,7 +71,7 @@
   <string name="ignore_underline"><u>ignorieren</u></string>
   <string name="accept_underline"><u>akzeptieren</u></string>
   <string name="title_activity_billing">BillingActivity</string>
-  <string name="crash_toast_text">Zitat: \'Houston wir haben ein Problem\'</string>
+  <string name="crash_toast_text">Fehler aufgetreten. Zitat: Houston wir haben ein Problem</string>
   <string name="crash_dialog_title">surespot ist abgestürzt</string>
   <string name="crash_dialog_text">Wir bedauern, dass ein unerwarteter Fehler aufgetreten ist. \n\nBitte helfen Sie uns das Problem zu beheben, indem Sie mit \'OK\' einen Fehlerbericht an uns senden. Dieser enthält keine persönlich identifizierenden Informationen.</string>
   <string name="crash_dialog_comment_prompt">Falls Sie möchten, können Sie uns einen Kommentar über das Problem mitteilen:</string>
@@ -148,17 +148,17 @@
   <string name="user_creation_throttled">Zu viele Benutzeranfragen, versuchen Sie es später erneut</string>
   <string name="signup_update">Bitte aktualisieren Sie surespot um einen neuen Benutzer zu erstellen</string>
   <string name="could_not_create_user">Benutzer konnte nicht erstellt werden, versuchen sie es später erneut</string>
-  <string name="pay">Bezahl</string>
-  <string name="what_you_like">was dir gefällt</string>
+  <string name="pay">bezahlen</string>
+  <string name="what_you_like">was Ihnen gefällt</string>
   <string name="billing_could_not_enable">Konnte In-App Bezahlung nicht aktivieren.</string>
   <string name="billing_purchase_error">Fehler, Kauf konnte nicht abgeschlossen werden.</string>
-  <string name="billing_paypal_link_email_subject">surespot \"pay what you like\" PayPal Link</string>
-  <string name="billing_paypal_link_email_body">Vielen Dank für die Zahlung an surespot! Anbei der PayPal Link:</string>
+  <string name="billing_paypal_link_email_subject">PayPal Link zum unterstützen von surespot</string>
+  <string name="billing_paypal_link_email_body">Vielen Dank für die Unterstützung von surespot! Anbei der PayPal Link:</string>
   <string name="none">keine</string>
   <string name="pwyl_paypal_send_to_self">Email an sich selbst versenden</string>
   <string name="billing_bitcoin_copied_to_clipboard">%s in die Zwischenablage kopiert</string>
-  <string name="billing_bitcoin_email_subject">surespot \"pay what you like\" Bitcoin Adresse</string>
-  <string name="billing_bitcoin_email_body_address">Vielen Dank für die Zahlung an surespot! Anbei die Bitcoin Adresse: %s</string>
+  <string name="billing_bitcoin_email_subject">Bitcoin Adresse zum unterstützen von surespot</string>
+  <string name="billing_bitcoin_email_body_address">Vielen Dank für die Unterstützung von surespot! Anbei die Bitcoin Adresse: %s</string>
   <string name="billing_bitcoin_email_body_qr">Der QR-Code kann hier eingesehen werden: % s</string>
   <string name="could_not_open_bitcoin_wallet">Die Bitcoin Brieftasche konnte nicht geöffnet werden</string>
   <string name="message_sending">versenden...</string>
@@ -250,7 +250,7 @@
   <string name="options">Optionen</string>
   <string name="clear_local_cache">Lokalen Cache löschen</string>
   <string name="delete_all_messages">Alle Mitteilungen löschen</string>
-  <string name="pay_what_you_like">\'pay what you like\'</string>
+  <string name="pay_what_you_like">surespot unterstützen</string>
   <string name="pref_title_general">Allgemein</string>
   <string name="pref_title_about_surespot">Über surespot...</string>
   <string name="pref_title_help">Hilfe...</string>
